# junkyard

./: .gitignore  README.md  main.py  pyproject.toml  run.sbatch  run_first_level_fmri.py
data/: README.md  fmri_data.ipynb  load_data.py  processed_behavioral_data.csv  sample_data.txt  test_data.ipynb
data/Skewed Gambling Task Behavioral/: sub-002_task-skewedGamblingTask_events.tsv  sub-003_task-skewedGamblingTask_events.tsv  sub-004_task-skewedGamblingTask_events.tsv  sub-005_task-skewedGamblingTask_events.tsv  sub-006_task-skewedGamblingTask_events.tsv  sub-007_task-skewedGamblingTask_events.tsv  sub-008_task-skewedGamblingTask_events.tsv  sub-009_task-skewedGamblingTask_events.tsv  sub-010_task-skewedGamblingTask_events.tsv  sub-011_task-skewedGamblingTask_events.tsv  sub-012_task-skewedGamblingTask_events.tsv  sub-013_task-skewedGamblingTask_events.tsv  sub-014_task-skewedGamblingTask_events.tsv  sub-015_task-skewedGamblingTask_events.tsv  sub-016_task-skewedGamblingTask_events.tsv  sub-017_task-skewedGamblingTask_events.tsv  sub-018_task-skewedGamblingTask_events.tsv  sub-019_task-skewedGamblingTask_events.tsv  sub-020_task-skewedGamblingTask_events.tsv  sub-021_task-skewedGamblingTask_events.tsv  sub-022_task-skewedGamblingTask_events.tsv  sub-023_task-skewedGamblingTask_events.tsv  sub-024_task-skewedGamblingTask_events.tsv  sub-025_task-skewedGamblingTask_events.tsv  sub-026_task-skewedGamblingTask_events.tsv  sub-027_task-skewedGamblingTask_events.tsv  (+48 more)
notebooks/: second_level_analysis.ipynb  tutorial_glm_analysis.ipynb
results/: README.md
(+5 files in other folders)
