[project]
name = "junkyard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nibabel>=5.3.3",
    "nilearn>=0.13.1",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "statsmodels>=0.14.6",
]
